syntax = "proto3";
package msg;

/*--------------------------------------------------------------------客户端消息------------------------------------------------------------*/
//登陆消息
message Game_C_TokenLogin {
    string Token = 1;           //用户token
    string MachineID = 2;       //机器序列号
}

//机器人登陆
message Game_C_RobotLogin {
    int32 UserID = 1;           //用户ID
    int32 BatchID = 2;          //机器人批次ID
}

//用户坐下
message Game_C_UserSitDown {
    int32 TableID = 1;          //桌子号
    int32 ChairID = 2;          //椅子号
}

//用户起立
message Game_C_UserStandUp {
}

//用户抢庄
message Game_C_UserQZ {
    int32 Multiple = 1;         //抢庄倍数
}

//用户下注
message Game_C_UserJetton {
    int32 Multiple = 1;         //下注倍数
}

//用户摊牌
message Game_C_UserTP {
}

/*--------------------------------------------------------------------服务端消息------------------------------------------------------------*/
//请求失败
message Game_S_ReqlyFail {
    int32 ErrorCode = 1;        //错误代码
    string ErrorMsg = 2;        //错误描述
}

//登陆成功
message Game_S_LoginSuccess {
    int32 GameQZTime = 1;	            //抢庄持续时间单位s
     int32 GameJettonTime = 2;    	    //下注持续时间单位s
     int32 GameTPTime = 3;			    //摊牌持续时间单位s
     int32 GameStartTime = 4 ;          //游戏开始时间
     repeated int32 MultipleList = 5 ;   //抢庄倍数
     repeated int32 JettonList = 6 ;     //抢庄倍数
     int32 Status = 7;                    //是否断线重连
 }

//坐下通知消息
message Game_S_SitDownNotify {
    Game_S_User Data = 1;
}

//user
message Game_S_User {
    int32 UserID = 1; //用户ID
    string NikeName = 2; //网名
    float UserGold = 3; //用户金币
    float UserDiamond = 4;//用户余额
    int32 MemberOrder = 5; //会员等级
    string HeadImageUrl = 6; //微信头像url
    int32 FaceID = 7; //头像ID
    int32 RoleID = 8; //角色标识
    int32 SuitID = 9; //套装标识
    int32 PhotoFrameID = 10;//头像框标识
    int32 TableID = 11;//桌子号
    int32 ChairID = 12; //椅子号
    int32 Status = 13; //用户状态
    int32 Gender = 14;//性别：0女，1男
}

//起立通知消息
message Game_S_StandUpNotify {
    int32 ChairID = 1;
}

//掉线通知消息
message Game_S_OffLineNotify {
    int32 ChairID = 1;
}

//上线通知消息
message Game_S_OnLineNotify {
    int32 ChairID = 1;
}

//空闲场景
message Game_S_FreeScene {
    sint64 SceneStartTime = 1; //场景开始时间
    int32 UserChairID = 2; //用户椅子号
    map<int32,Game_S_User> UserList = 3;//用户列表
}

//抢庄场景
message Game_S_QZScene {
     sint64 SceneStartTime = 1; //场景开始时间
     int32 UserChairID = 2; //用户椅子号
     map<int32,Game_S_User> UserList = 3;//用户列表
     map<int32,int32> UserListQZ = 4;//用户抢庄
     map<int32,bool> UserPlaying = 5;//开始游戏忘记
}

//下注场景
message Game_S_JettonScene {
     sint64 SceneStartTime = 1; //场景开始时间
     int32 UserChairID = 2; //用户椅子号
     map<int32,Game_S_User> UserList = 3;//用户列表
     map<int32,int32> UserListJetton = 4;//玩家下注
     int32 BankerChairID = 5; //庄家椅子号
     int32 BankerMultiple = 6; //庄家抢庄倍数
     map<int32,bool> UserPlaying = 7;//开始游戏忘记
}

//摊牌场景
message Game_S_TPScene {
     sint64 SceneStartTime = 1; //场景开始时间
     int32 UserChairID = 2; //用户椅子号
     map<int32,Game_S_User> UserList = 3;//用户列表
     map<int32,Game_S_LotteryPoker> UserListTP = 4;//已摊牌玩家
     int32 BankerChairID = 5; //庄家椅子号
     int32 BankerMultiple = 6; //庄家抢庄倍数
     map<int32,bool> UserPlaying = 7;//开始游戏忘记
     map<int32,int32> UserListJetton = 8;//玩家下注
}

message Game_S_LotteryPoker {
    int32 PokerType = 1;
    repeated int32 LotteryPoker =2 ;

}

//开始定时器
message Game_S_StartTime {
    int32 GameStatus = 1;                   //状态
    map<int32,bool> UserPlaying = 2;        //开始游戏玩家
}

//结束游戏消息
message Game_S_GameConclude {
    map<int32,float> UserListLoss = 1; //用户输赢
    map<int32,float>  UserListMoney=2; // 用户金额
}

//抢庄通知
message Game_S_UserQZ {
    int32 ChairID = 1;          //用户椅子号
    int32 Multiple = 2;         //抢庄倍数
}

//定庄通知
message Game_S_GameDZ {
    int32 ChairID = 1;          //庄家椅子号
    int32 Multiple = 2;         //抢庄倍数
}

//下注通知
message Game_S_UserJetton {
    int32 ChairID = 1;                  //椅子号
    int32 Multiple = 2;                 //下注倍数
}

//摊牌通知
message Game_S_UserTP {
    int32 ChairID = 1;                  //椅子号
    Game_S_LotteryPoker Poker = 2;          //用户扑克
}
